<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Loan Amount -->
    <string name="loan_amount_label">Loan amount</string>
    <string name="loan_amount_format">$%d</string>
    <string name="loan_amount_button_next">NEXT</string>

    <!-- Personal Information -->
    <string name="personal_info_label">Personal info</string>
    <string name="personal_info_first_name_hint">First name</string>
    <string name="personal_info_first_name_error">Please enter your first name.</string>
    <string name="personal_info_last_name_hint">Last name</string>
    <string name="personal_info_last_name_error">Please enter your last name.</string>
    <string name="personal_info_email_hint">Email</string>
    <string name="personal_info_email_error">Please enter a valid email address.</string>
    <string name="personal_info_phone_hint">Phone</string>
    <string name="personal_info_phone_error">Please enter a valid phone number.</string>

    <!-- Address -->
    <string name="address_label">Address</string>
    <string name="address_address_hint">Address</string>
    <string name="address_address_error">Please enter a valid address.</string>
    <string name="address_apartment_number_hint">Unit/Apt #</string>
    <string name="address_city_hint">City</string>
    <string name="address_city_error">Please enter a valid city.</string>
    <string name="address_state_hint">State</string>
    <string name="address_state_error">Please select a state.</string>
    <string name="address_zip_code_hint">ZIP</string>
    <string name="address_zip_code_error">Please enter a valid ZIP.</string>

    <!-- Income -->
    <string name="income_label">Income</string>
    <string name="income_format">$%dK</string>
    <string name="income_format_and_more">$%dK+</string>

    <!-- ID Verification -->
    <string name="id_verification_label">ID verification</string>
    <string name="id_verification_birthday_hint">Birthday</string>
    <string name="id_verification_birthday_error">You must be 18 years or older.</string>
    <string name="id_verification_social_security_hint">Social security #</string>
    <string name="id_verification_social_security_error">Please enter all 9 digits.</string>
    <string name="id_verification_disclaimer">Your information is private and secure.</string>
    <string name="id_verification_terms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque turpis ut malesuada iaculis. Nulla facilisi. Etiam ultrices augue mi, et egestas nisi faucibus quis.</string>
    <string name="id_verification_button_next">GET OFFERS</string>
    <string name="id_verification_toast_api_success">User created.\nToken: \'%s\'.</string>
    <string name="id_verification_toast_api_error">Error: %s</string>
</resources>