<?xml version="1.0" encoding="utf-8"?>
<me.ledge.link.sdk.sdk.views.userdata.AddressView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />

    <!-- Dummy to get focus on start. -->
    <RelativeLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/abl_toolbar_wrapper"
            android:layout_above="@+id/tv_next_bttn">

        <LinearLayout
                style="?attr/llsdk_dataContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address"
                    style="?attr/llsdk_idVerification_inputWrapperStyle"
                    android:theme="?attr/llsdk_idVerification_inputWrapperTheme"
                    android:nextFocusUp="@id/til_address"
                    android:nextFocusLeft="@id/til_address">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_address"
                        style="?attr/llsdk_idVerification_editTextStyle"
                        android:inputType="textPostalAddress"
                        android:singleLine="true"
                        android:hint="@string/address_address_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_apartment_number"
                    style="?attr/llsdk_idVerification_inputWrapperStyle"
                    android:theme="?attr/llsdk_idVerification_inputWrapperTheme">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_apartment_number"
                        style="?attr/llsdk_idVerification_editTextStyle"
                        android:inputType="text"
                        android:singleLine="true"
                        android:hint="@string/address_apartment_number_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_city"
                    style="?attr/llsdk_idVerification_inputWrapperStyle"
                    android:theme="?attr/llsdk_idVerification_inputWrapperTheme">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_city"
                        style="?attr/llsdk_idVerification_editTextStyle"
                        android:inputType="text"
                        android:singleLine="true"
                        android:hint="@string/address_city_hint" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_state"
                        style="?attr/llsdk_idVerification_inputWrapperStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:theme="?attr/llsdk_idVerification_inputWrapperTheme">

                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_state"
                            style="?attr/llsdk_idVerification_editTextStyle"
                            android:nextFocusDown="@+id/et_zip_code"
                            android:nextFocusRight="@+id/et_zip_code"
                            android:inputType="text"
                            android:maxLength="@integer/state_length"
                            android:singleLine="true"
                            android:hint="@string/address_state_hint" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_zip_code"
                        style="?attr/llsdk_idVerification_inputWrapperStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:theme="?attr/llsdk_idVerification_inputWrapperTheme">

                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/et_zip_code"
                            style="?attr/llsdk_idVerification_editTextStyle"
                            android:inputType="phone"
                            android:maxLength="@integer/zip_code_length"
                            android:singleLine="true"
                            android:hint="@string/address_zip_code_hint" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/tv_next_bttn"
            style="?attr/llsdk_nextButtonStyle"
            android:text="@string/loan_amount_button_next" />

</me.ledge.link.sdk.sdk.views.userdata.AddressView>
